k8s/apps/python/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-deli
  namespace: ${NS_APPS}
spec:
  selector: {app: python-deli}
  ports:
    - {name: http, port: 80, targetPort: http}
