k8s/apps/python/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-deli
  namespace: ${NS_APPS}
  annotations:
    ${TLS_ANNOTATION}
spec:
  ingressClassName: nginx
${TLS_SECTION}
  rules:
    - host: ${INGRESS_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-deli
                port: {name: http}
